apps/openwebui/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
  labels:
    app: openwebui
spec:
  type: ClusterIP
  selector:
    app: openwebui
    app.kubernetes.io/name: openwebui
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
